--- a/index.html
+++ b/index.html
@@ -3,32 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
 </head>
 <body>
     <!--Navbar-->
     <nav>
         <div class="contenedor_logo">
-            <a class="logo" href="#">Organic Food</a>
+            <a class="logo" href="#">honor</a>
             <span class="hamburguesa">
                 <i class="fas fa-bars"></i>
             </span>
         </div>
         
         <div class="contenedor_menu-sociales">
+            <span class="close"><i class="fas fa-times"></i></span>
             <ul class="opciones_menu">
                 <li>
-                    <a href="#"><strong>Inicio</strong></a>
+                    <a href="#"><strong>Home</strong></a>
                 </li>
                 <li>
-                    <a href="#">¿Quienes somos?</a>
+                    <a href="#">Smartphone</a>
                 </li>
                 <li>
-                    <a href="#">Servicios</a>
-                </li>
-                <li>
-                    <a href="#">Contactanos</a>
+                    <a href="#">Store</a>
                 </li>
             </ul>
             <ul class="opciones_social">
@@ -53,6 +53,7 @@
                     </a>
                 </li>
             </ul>
+            <span class="sub_logo">honor</span>
         </div>
     </nav>
     <!--Heater-->
