--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Honor</title>
 </head>
 <body>
     <!--Navbar-->
@@ -16,6 +16,20 @@
             <span class="hamburguesa">
                 <i class="fas fa-bars"></i>
             </span>
+            <ul class="opciones_menu_laptop">
+                <li>
+                    <a href="#"><strong>Home</strong></a>
+                </li>
+                <li>
+                    <a href="#">Smartphone</a>
+                </li>
+                <li>
+                    <a href="#">Store</a>
+                </li>
+                <li>
+                    <a href="#"><button>Buy Now</button></a>
+                </li>
+            </ul>
         </div>
         
         <div class="contenedor_menu-sociales">
@@ -39,7 +53,7 @@
                 </li>
                 <li>
                     <a href="#">
-                        <i class="fab fa-linkedin-in"></i>
+                        <i class="fab fa-pinterest"></i>
                     </a>
                 </li>
                 <li>
