aplicacion de grid

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <!--Navbar-->
-    <nav>
+    <!-- <nav>
+    
+    
         <div class="contenedor_logo">
             <a class="logo" href="#">honor</a>
             <span class="hamburguesa">
@@ -69,6 +71,18 @@
             </ul>
             <span class="sub_logo">honor</span>
         </div>
+    </nav> -->
+    <nav>
+        <a href="#" class="icon_menu">
+            <span><i class="fas fa-bars"></i></span>
+        </a>
+        <a href="#" class="logo">honor</a>
+        <ul class="menu">
+            <li class="item_menu">Home</li>
+            <li class="item_menu"></li>
+            <li class="item_menu"></li>
+            <li class="boton_menu"></li>
+        </ul>
     </nav>
     <!--Heater-->
     <!--Seccion 1-->
