--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Stencil+Display:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css">
     <link rel="stylesheet" href="css/style.css">
+
     <title>Honor</title>
 </head>
 <body>
@@ -16,6 +18,7 @@
         </a>
         <a href="#" class="logo">honor</a>
         <div class="contenedor_menu">
+            <span class="icon_menu_out"><i class="fas fa-times"></i></span>
             <ul class="menu">
                 <li class="item_menu">
                     <a href="">Home</a>
@@ -26,11 +29,14 @@
                 <li class="item_menu">
                     <a href="">Store</a>
                 </li>
-                <li class="boton_menu">
-                    <button class="boton_compra">Buy</button>
-                </li>
             </ul>
+            <span class="sub_logo">honor</span>
         </div>
+        <div class="accion">
+            <a href="#"><span class="icon_store"><i class="fas fa-store"></i></span></a>
+            <a href="#"><span class="icon_user"><i class="fas fa-user"></i></span></a>
+        </div>
+        
     </nav>
     <!--Heater-->
     <!--Seccion 1-->
