ajustes de navbar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,10 @@
                     <a href="">Store</a>
                 </li>
             </ul>
+            <div class="sub_accion">
+                <a href="#"><span class="icon_store"><i class="fas fa-store"></i></span></a>
+                <a href="#"><span class="icon_user"><i class="fas fa-user"></i></span></a>
+            </div>
             <span class="sub_logo">honor</span>
         </div>
         <div class="accion">
@@ -39,6 +43,9 @@
         
     </nav>
     <!--Heater-->
+    <section class="heater">
+        <img src="/image/smartwaatch 5.png" alt="smartwaatch">
+    </section>
     <!--Seccion 1-->
     <!--Divición-->
     <!--Sección 2-->
